--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "markdown": "^0.5.0",
+    "mongoose": "^4.7.5",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "serve-favicon": "~2.3.0"
